--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.pacioianu.david:ink-page-indicator:+'
+    compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
 }
