--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
+    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.pacioianu.david:ink-page-indicator:+'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
+    compile 'com.android.support:support-v4:24.2.1'
 }
