--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity"
+        <activity
+            android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.PackSelectorActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.AboutUsActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.PackSelectorActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.AboutUsActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.Adapters.RegisterActivity"></activity>
     </application>
 
 </manifest>
