--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name=".ui.AboutUsActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.Adapters.RegisterActivity"></activity>
+        <activity android:name=".ui.RegisterActivity"></activity>
     </application>
 
 </manifest>
