--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.pacioianu.david:ink-page-indicator:+'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
 }
