commit choosing profile image page my name is mohammadmahdi version 1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:name=".ui.AboutUsActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.RegisterActivity" />
-        <activity android:name=".ui.RankingPageActivity"></activity>
+        <activity android:name=".ui.RankingPageActivity" />
+        <activity android:name=".ui.ProfileImageActivity"></activity>
     </application>
 
 </manifest>
