--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
-    compile 'com.pacioianu.david:ink-page-indicator:+'
+    compile 'com.pacioianu.david:ink-page-indicator:1.2.0'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
 }
