--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.GameActivity"/>
         <activity android:name=".ui.FindRivalActivity" />
         <activity android:name=".ui.TrophyPageActivity"></activity>
     </application>
