--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.TestResponsivityActivity">            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
         <activity
             android:name=".ui.MainActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.PackSelectorActivity"
             android:screenOrientation="portrait" />
@@ -21,15 +25,11 @@
         <activity android:name=".ui.RankingPageActivity" />
         <activity android:name=".ui.ProfileImageActivity" />
         <activity android:name=".ui.RegisterPageActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".ui.GameActivity"/>
+        <activity android:name=".ui.GameActivity" />
         <activity android:name=".ui.FindRivalActivity" />
-        <activity android:name=".ui.TrophyPageActivity"></activity>
+        <activity android:name=".ui.TrophyPageActivity" />
     </application>
 
 </manifest>
