--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.TestResponsivityActivity">            <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".ui.TestResponsivityActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait"></activity>
@@ -21,7 +23,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.AboutUsActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait">
+
+        </activity>
         <activity android:name=".ui.RankingPageActivity" />
         <activity android:name=".ui.ProfileImageActivity" />
         <activity android:name=".ui.RegisterPageActivity">
