--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         <activity android:name=".ui.TestResponsivityActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -21,11 +20,7 @@
         <activity
             android:name=".ui.PackSelectorActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.AboutUsActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+        <activity android:name=".ui.AboutUsActivity"></activity>
         <activity android:name=".ui.RankingPageActivity" />
         <activity android:name=".ui.ProfileImageActivity" />
         <activity android:name=".ui.RegisterPageActivity">
