--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,6 @@
         <activity android:name=".ui.TestResponsivityActivity">        </activity>
         <activity
             android:name=".ui.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
         </activity>
         <activity
             android:name=".ui.PackSelectorActivity"
@@ -26,7 +21,12 @@
         <activity android:name=".ui.RegisterPageActivity">
 
         </activity>
-        <activity android:name=".ui.GameActivity" />
+        <activity android:name=".ui.GameActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.FindRivalActivity" />
         <activity android:name=".ui.TrophyPageActivity" />
     </application>
