--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,21 @@
             android:screenOrientation="portrait" />
         <activity android:name=".ui.AboutUsActivity"></activity>
         <activity android:name=".ui.RankingPageActivity" />
-        <activity android:name=".ui.ProfileImageActivity" />
-        <activity android:name=".ui.RegisterPageActivity">
-
-        </activity>
-        <activity android:name=".ui.GameActivity" >
+        <activity android:name=".ui.ProfileImageActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".ui.FindRivalActivity" />
+        <activity android:name=".ui.RegisterPageActivity">
+
+        </activity>
+        <activity android:name=".ui.GameActivity" >
+
+        </activity>
+        <activity android:name=".ui.FindRivalActivity" >
+        </activity>
         <activity android:name=".ui.TrophyPageActivity" />
     </application>
 
