--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,13 @@
             android:name=".ui.PackSelectorActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.AboutUsActivity"></activity>
-        <activity android:name=".ui.RankingPageActivity" />
-        <activity android:name=".ui.ProfileImageActivity" >
+        <activity android:name=".ui.RankingPageActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.ProfileImageActivity" >
 
         </activity>
         <activity android:name=".ui.RegisterPageActivity">
@@ -31,6 +32,7 @@
 
         </activity>
         <activity android:name=".ui.FindRivalActivity" >
+
         </activity>
         <activity android:name=".ui.TrophyPageActivity" />
     </application>
