--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile project(':responsivegui')
+    compile project(':responsiveguiapi9')
     compile 'com.pacioianu.david:ink-page-indicator:1.2.0'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     compile 'com.anton46:stepsview:0.0.2'
     compile 'com.android.support:design:24.2.1'
