mohammadmahdi add two animations to newGameDialog and mainActivity and GameActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".ui.RegisterPageActivity">
 
         </activity>
-        <activity android:name=".ui.GameActivity">
+        <activity android:name=".ui.GameActivity"
+            android:parentActivityName=".ui.MainActivity">
 
         </activity>
         <activity android:name=".ui.FindRivalActivity"></activity>
