--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,6 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.TestResponsivityActivity"></activity>
         <activity android:name=".ui.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.NewGameDialog"
             android:theme="@style/cosDialog"></activity>
@@ -30,10 +26,12 @@
 
         </activity>
         <activity android:name=".ui.RegisterPageActivity">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".ui.GameActivity"
-            android:parentActivityName=".ui.MainActivity">
+        <activity android:name=".ui.GameActivity">
 
         </activity>
         <activity android:name=".ui.FindRivalActivity"></activity>
