--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,34 +8,35 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.TestResponsivityActivity"></activity>
-        <activity android:name=".ui.MainActivity">
-        </activity>
-        <activity android:name=".ui.NewGameDialog"
-            android:theme="@style/cosDialog"></activity>
-        <activity android:name=".ui.WinDialog"
-            android:theme="@style/cosDialog"></activity>
-        <activity android:name=".ui.BuyCoinDialog"
-            android:theme="@style/cosDialog"></activity>
+        <activity android:name=".ui.TestResponsivityActivity" />
+        <activity android:name=".ui.MainActivity"></activity>
+        <activity
+            android:name=".ui.NewGameDialog"
+            android:theme="@style/cosDialog" />
+        <activity
+            android:name=".ui.WinDialog"
+            android:theme="@style/cosDialog" />
+        <activity
+            android:name=".ui.BuyCoinDialog"
+            android:theme="@style/cosDialog" />
         <activity
             android:name=".ui.PackSelectorActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.AboutUsActivity"></activity>
+        <activity android:name=".ui.AboutUsActivity" />
         <activity android:name=".ui.RankingPageActivity" />
-        <activity android:name=".ui.ProfileImageActivity">
-
-        </activity>
+        <activity android:name=".ui.ProfileImageActivity"></activity>
         <activity android:name=".ui.RegisterPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.GameActivity">
-
-        </activity>
-        <activity android:name=".ui.FindRivalActivity"></activity>
+        <activity android:name=".ui.GameActivity"></activity>
+        <activity android:name=".ui.FindRivalActivity" />
         <activity android:name=".ui.TrophyPageActivity" />
+        <activity
+            android:name=".ui.LoseDialog"
+            android:theme="@style/cosDialog"></activity>
     </application>
 
 </manifest>
